--- a/frontend/index.css
+++ b/frontend/index.css
@@ -4,7 +4,7 @@ body {
 
 .container-fluid {
   padding: 0;
-  height: 100%;
+  /* height: 100%; */
 }
 
 #nav-bar {
@@ -20,7 +20,7 @@ body {
               0px 8px 13px rgba(0,0,0,0.1),
               0px 18px 23px rgba(0,0,0,0.1);
   text-align: center;
-  height: 50em;
+  height: 100vh;
 }
 
 #cover .jumbotron {
