--- a/frontend/index.css
+++ b/frontend/index.css
@@ -21,6 +21,7 @@ body {
               0px 18px 23px rgba(0,0,0,0.1);
   text-align: center;
   height: 100vh;
+  margin-bottom: 0;
 }
 
 #cover .jumbotron {
