--- a/frontend/index.css
+++ b/frontend/index.css
@@ -2,13 +2,21 @@ body {
   font-family: 'Roboto';
 }
 
-.container-fluid {
+#bootstrap-override {
   padding: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 #nav-bar {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+#try-it-out-btn {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+#try-it-out-btn:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 #cover {
@@ -20,7 +28,7 @@ body {
               0px 8px 13px rgba(0,0,0,0.1),
               0px 18px 23px rgba(0,0,0,0.1);
   text-align: center;
-  height: 50em;
+  height: 100vh;
 }
 
 #cover .jumbotron {
