--- a/frontend/index.css
+++ b/frontend/index.css
@@ -60,7 +60,7 @@ body {
   #test {
       resize: both;
   }
-  
+
   #resize-test2 {
     border: 1px solid black;
     background-color: white;
@@ -95,11 +95,21 @@ body {
 } */
 
 #delete-border{
-  border: 3px solid red;
-  background-color: lightblue;
+  border: 2px solid red; 
+  background-color: white;
+  padding: 1em;
   width: 270px;
+  border-radius: 0.5em;
   /* overflow: auto; */
   cursor: move;
   position: absolute;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
+
+  /* TEST OVERWRITING BORDER STYLE FROM ID SELECTOR -> CLASS SELECTOR */
+  .testClass {
+    border: 2px solid red; 
+    width: 270px;
+    color: green;
+  }
 
