--- a/frontend/index.css
+++ b/frontend/index.css
@@ -7,6 +7,10 @@ body {
   height: 100vh;
 }
 
+#bootstrap-override p {
+  margin-bottom: 0;
+}
+
 #nav-bar {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -103,6 +107,14 @@ body {
   height: 100px;
   font-size: 0.8vw;
   border: 1px solid black;
+}
+
+.element-text {
+  cursor: pointer;
+}
+
+.element-text:hover {
+  background-color: #4CBDD6;
 }
 
 /* #bootstrap-override #drop-down-button {
