--- a/frontend/index.css
+++ b/frontend/index.css
@@ -65,7 +65,7 @@ body {
       resize: both;
   }
 
-  #resize-test2 {
+  .paragraph {
     border: 1px solid black;
     background-color: white;
     padding: 1em;
