--- a/frontend/index.css
+++ b/frontend/index.css
@@ -92,7 +92,7 @@ body {
 .media-object-img {
   width: 75px;
   height: 75px;
-  background: #222 url('img/cat.jpg') no-repeat center;
+  background: url('img/add-icon.svg') no-repeat center;
   background-size: cover;
   color: white;
   margin: 0.4em 1em;
