--- a/index.css
+++ b/index.css
@@ -89,6 +89,25 @@ body {
     border-radius:10%;
 }
 
+.media-object-img {
+  width: 75px;
+  height: 75px;
+  background: url('img/add-icon.svg') no-repeat center;
+  background-size: cover;
+  color: white;
+  margin: 0.4em 1em;
+}
+
+.media-object-img:hover {
+  cursor: pointer;
+}
+
+.media {
+  width: 600px;
+  height: 100px;
+  font-size: 0.8vw;
+  border: 1px solid black;
+}
 /* #bootstrap-override #drop-down-button {
   margin-right: 2em;
 }
