--- a/index.css
+++ b/index.css
@@ -108,6 +108,15 @@ body {
   font-size: 0.8vw;
   border: 1px solid black;
 }
+
+.element-text {
+  cursor: pointer;
+}
+
+.element-text:hover {
+  background-color: #4CBDD6;
+}
+
 /* #bootstrap-override #drop-down-button {
   margin-right: 2em;
 }
@@ -116,19 +125,22 @@ body {
   margin-right: 1em;
 } */
 
-/* #delete-border{
+#delete-border{
   border: 2px solid red; 
   background-color: white;
   padding: 1em;
   width: 270px;
   border-radius: 0.5em;
+  /* overflow: auto; */
   cursor: move;
   position: absolute;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-} */
+}
 
   /* TEST OVERWRITING BORDER STYLE FROM ID SELECTOR -> CLASS SELECTOR */
-  .delete-border {
-    border: 2px solid red !important; 
+  .testClass {
+    border: 2px solid red; 
+    width: 270px;
+    color: green;
   }
 
